MSTAT: cmt fertig

--- a/Math-Ma-MSTAT/literatur.bib
+++ b/Math-Ma-MSTAT/literatur.bib
@@ -229,3 +229,11 @@
   publisher={Elsevier}
 }
 
+@article{Ferger2018WeakCO,
+  title={Weak convergence of probability measures to Choquet capacity functionals},
+  author={Dietmar Ferger},
+  journal={Turkish Journal of Mathematics},
+  year={2018},
+  volume={42},
+  pages={1747-1764}
+}
