--- a/Math-Ma-MSTAT/mstat_vorlesung_main.tex
+++ b/Math-Ma-MSTAT/mstat_vorlesung_main.tex
@@ -510,6 +510,7 @@
 	
 	\chapter{Verteilungskonvergenz von Zufallsvariablen in metrischen Räumen}
 	\input{mstat_4_1_portmanteau}
+	\input{mstat_4_2_continuousMappingTheorem}
 	
     \vfill \hfill $\blacksquare$
     
