proof of brooks' theorem

--- a/Math-Ba-SEM/literatur.bib
+++ b/Math-Ba-SEM/literatur.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 @book {buesing,
 author = { Büsing, Christina },
 title = { Graphen- und Netzwerkoptimierung },
@@ -41,3 +42,15 @@ address = { Heidelberg [u.a.] }
   urldate       = {14.01.2020}
 }
 
+@Article{Cranston2014,
+  author    = {Cranston, Daniel W. and Rabern, Landon},
+  title     = {Brooks' Theorem and Beyond},
+  year      = {2014},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  doi       = {10.48550/ARXIV.1403.0479},
+  keywords  = {Combinatorics (math.CO), FOS: Mathematics, FOS: Mathematics, 05C15},
+  publisher = {arXiv},
+  url       = {https://arxiv.org/abs/1403.0479},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
