--- a/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_1_2_beispieleKontinuierlicheOptimierung.tex
+++ b/Math-Ba-OPTINUM/OPTINUM_1_Vorlesung/optinum_1_2_beispieleKontinuierlicheOptimierung.tex
@@ -4,7 +4,7 @@
 
 Die Transportoptimierung ist ein Beispiel einer linearen Optimierung.
 
-Es gebe Erzeuger $i \in I = \menge{1, \dots , n}$ und Verbraucher $j \in J = \menge{1, \dots , n}$. Weiterhin seien die Kosten $c_{ij}$ für den Transport einer Einheit von $i$ nach $j$ sowie der Vorrat $a_i > 0$ und der Bedarf $b_j > 0$ für alle $i$ und $j$ gegeben. Wie muss der Transport organisiert werden, damit die Gesamtkosten minimal sind?
+Es gebe Erzeuger $i \in I = \menge{1, \dots , m}$ und Verbraucher $j \in J = \menge{1, \dots , n}$. Weiterhin seien die Kosten $c_{ij}$ für den Transport einer Einheit von $i$ nach $j$ sowie der Vorrat $a_i > 0$ und der Bedarf $b_j > 0$ für alle $i$ und $j$ gegeben. Wie muss der Transport organisiert werden, damit die Gesamtkosten minimal sind?
 
 Für jedes mathematische Modell einer OA braucht man
 \begin{itemize}[nolistsep, topsep=-\parskip]
